kubernetes-YAMLs/get-details-config-file-var.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: get-details-config-file-var
  name: get-details-config-file-var
spec:
  containers:
  - image: get-details:1.5
    name: get-details-config-file-var
    args:
      - "cat /etc/config/DB_URL"
      - "cat /etc/config/REDIS_URL"
    volumeMounts:
      - name: multi-ways-volume
        mountPath: /etc/config
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
    - name: multi-ways-volume
      configMap:
        name: multi-ways-config
status: {}
