kubernetes-YAMLs/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx-depoyment
  name: nginx-depoyment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-depoyment
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-depoyment
    spec:
      containers:
      - image: nginx:1.18.0
        name: nginx
        ports:
        - containerPort: 80
        resources: {}
status: {}
