kubernetes-YAMLs/nginx-int.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-init
  name: nginx-init
spec:
  containers:
  - image: nginx
    name: nginx-init
    ports:
    - containerPort: 80
    resources: {}
    volumeMounts:
    - name: vol
      mountPath: /usr/share/nginx/htm/
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
  - name: vol
status: {}
