kubernetes-YAMLs/nginx-node-selector.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-node-selector
  name: nginx-node-selector
spec:
  containers:
  - image: nginx
    name: nginx-node-selector
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  nodeSelector:
    accelerator: nvidia-tesla-p100
status: {}
