kubernetes-YAMLs/nginx-sec-context.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-sec-context
  name: nginx-sec-context
spec:
  securityContext:
    runAsUser: 101
  containers:
  - image: nginx
    name: nginx-sec-context
    resources: {}
    securityContext:
      capabilities:
        add: ["NET_ADMIN","SYS_TIME"]
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
