kubernetes-YAMLs/nginx-tol.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-tol
  name: nginx-tol
spec:
  containers:
  - image: nginx
    name: nginx-tol
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  tolerations:
  - effect: NoSchedule
    key: tier   
    operator: Equal     
    value: frontend 
status: {}
