kubernetes-YAMLs/nginx-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: can-nginx
    version: v1
  name: nginx-v1
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nginx-v1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-v1
        version: v1
        load: share
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 8080
        resources: {}
status: {}
