kubernetes-YAMLs/pod-sa.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod-sa
  name: pod-sa
spec:
  containers:
  - image: nginx
    name: pod-sa
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  serviceAccount: myuser
status: {}
