kubernetes-YAMLs/readiness-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: readiness-pod
  name: readiness-pod
spec:
  containers:
  - image: nginx
    name: readiness-pod
    ports:
      - containerPort: 80
    resources: {}
    readinessProbe:
       httpGet:
        path: /
        port: 80
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
