kubernetes-YAMLs/while-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: while-pod
  name: while-pod
spec:
  containers:
  - image: busybox
    name: while-pod
    resources: {}
    command:
      - sh
      - -c
      - 'i=0; while true; do echo "$i: $(date)"; i=$((i+1)); sleep 1; done'
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
