kubernetes-YAMLs/demo-clusterip-definition.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: demo-clusterip
  name: demo-clusterip
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    #app: demo-clusterip
    app: deployment-demo
  type: ClusterIP
status:
  loadBalancer: {}
