kubernetes-YAMLs/deployment-demo-nodeport-definition.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: deployment-demo-nodeport
  name: deployment-demo-nodeport
spec:
  ports:
  - name: 80-80
    nodePort: 30008
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    #app: deployment-demo-nodeport
    app: deployment-demo
  type: NodePort
status:
  loadBalancer: {}
