kubernetes-YAMLs/ingress-demo-definition.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: ingress-demo-definition
spec:
  rules:
  - host: thisisfirstingress.com
    http:
      paths:
      - backend:
          service:
            name: deployment-demo-nodeport
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
